--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -246,3 +246,86 @@ h1, h2, h3, h4, h5, h6, p, ul, li, span, div, i, a, button {
       width: 44px;
       height: 44px;
       border-radius: 90px; }
+
+.main {
+  width: 100%;
+  height: 100%; }
+  .main__section1 {
+    margin-top: 32px;
+    width: 100%;
+    height: auto; }
+    .main__section1__container {
+      margin: 0 auto;
+      width: 90%; }
+      .main__section1__container__row {
+        width: 100%;
+        display: flex;
+        flex-wrap: nowrap;
+        gap: 32px; }
+        .main__section1__container__row__col6 {
+          display: flex;
+          align-items: center;
+          flex-direction: column;
+          height: 360px;
+          position: relative; }
+          .main__section1__container__row__col6 .left, .main__section1__container__row__col6 .right {
+            right: 2%;
+            position: absolute;
+            background-color: #54A6FF;
+            z-index: -1;
+            border-radius: 10px;
+            width: 100%;
+            height: 100%; }
+          .main__section1__container__row__col6 .right {
+            background-color: #3563E9; }
+          .main__section1__container__row__col6 h3 {
+            width: 272px;
+            font-size: 32px;
+            color: #FFFFFF; }
+          .main__section1__container__row__col6 .about {
+            position: absolute;
+            left: 20px;
+            top: 20px; }
+            .main__section1__container__row__col6 .about p {
+              margin: 20px 0;
+              color: #FFFFFF;
+              width: 284px;
+              font-size: 16px; }
+            .main__section1__container__row__col6 .about a {
+              display: flex;
+              width: 116px;
+              height: 44px;
+              padding: 0px 20px;
+              justify-content: center;
+              align-items: center;
+              gap: 8px;
+              border-radius: 4px;
+              background-color: #3563E9; }
+              .main__section1__container__row__col6 .about a div {
+                display: flex;
+                width: 116px;
+                height: 24px;
+                flex-direction: column;
+                justify-content: center;
+                color: #FFFFFF;
+                text-align: center;
+                font-size: 16px; }
+            .main__section1__container__row__col6 .about .buttonlink {
+              background-color: #54A6FF; }
+  .main__section3 {
+    margin-top: 15px;
+    width: 100%;
+    height: auto; }
+    .main__section3__container {
+      width: 90%; }
+      .main__section3__container__row {
+        width: 100%;
+        display: flex;
+        flex-wrap: nowrap;
+        gap: 32px; }
+        .main__section3__container__row .col-4 {
+          display: flex;
+          align-items: flex-start;
+          flex-direction: column;
+          height: 360px;
+          position: relative; }
