--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,7 +1,7 @@
 @import './base/reset';
 @import './base/typography';
 @import './components/button';
-@import './components/cover';
+@import './components/icons';
 @import './layout/footer';
 @import './layout/grid';
 @import './layout/form';
