--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,6 +15,137 @@ ul {
 h1, h2, h3, h4, h5, h6, p, ul, li, span, div, i, a, button {
   font-family: " Plus Jakarta Sans"; }
 
+.buttonsecondd {
+  display: flex;
+  width: 130px;
+  height: 44px;
+  padding: 0px 20px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  border-radius: 4px;
+  background-color: #54A6FF; }
+  .buttonsecondd .buttoninside2 {
+    display: flex;
+    width: 120px;
+    height: 24px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 16px; }
+
+.buttonfirst {
+  display: flex;
+  width: 130px;
+  height: 44px;
+  padding: 0px 20px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  border-radius: 4px;
+  background-color: #3563E9; }
+  .buttonfirst .buttoninside {
+    display: flex;
+    width: 120px;
+    height: 24px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 16px; }
+
+.rentbuttons {
+  display: flex;
+  width: 130px;
+  height: 44px;
+  padding: 0px 20px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  border-radius: 4px;
+  background-color: #3563E9; }
+  .rentbuttons .insides {
+    display: flex;
+    width: 120px;
+    height: 24px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 16px; }
+
+.showbutton {
+  display: flex;
+  width: 156px;
+  height: 44px;
+  padding: 0px 20px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  border-radius: 4px;
+  background-color: #3563E9; }
+  .showbutton .showinside {
+    display: flex;
+    width: 116px;
+    height: 24px;
+    flex-direction: column;
+    justify-content: center;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 16px; }
+
+.searchicon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 0px 10px 20px;
+  width: 24px;
+  height: 24px; }
+
+.frsticon, .scondicon, .thirdicon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  background-color: #C3D4E966;
+  height: 44px;
+  border-radius: 90px;
+  border: 1px solid rgba(195, 212, 233, 0.4);
+  opacity: 0.8; }
+  .frsticon a, .scondicon a, .thirdicon a {
+    color: #596780; }
+
+.scondicon {
+  position: relative; }
+  .scondicon .redicon {
+    color: #FF4423;
+    position: absolute;
+    width: 11px;
+    height: 11px;
+    right: 7px;
+    margin-bottom: 5px;
+    bottom: 31px; }
+
+.icons {
+  gap: 20px;
+  position: absolute;
+  top: 64%;
+  left: 5%;
+  display: flex;
+  color: #90A3BF; }
+  .icons div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 6px; }
+
+.fa-heart:hover {
+  cursor: pointer; }
+
 .footer {
   width: 100%;
   display: flex;
@@ -156,6 +287,54 @@ h1, h2, h3, h4, h5, h6, p, ul, li, span, div, i, a, button {
 h1, h2, h3, h4, h5, h6, p, ul, li, span, div, i, a, button {
   font-family: " Plus Jakarta Sans"; }
 
+.searchicon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 0px 10px 20px;
+  width: 24px;
+  height: 24px; }
+
+.frsticon, .scondicon, .thirdicon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  background-color: #C3D4E966;
+  height: 44px;
+  border-radius: 90px;
+  border: 1px solid rgba(195, 212, 233, 0.4);
+  opacity: 0.8; }
+  .frsticon a, .scondicon a, .thirdicon a {
+    color: #596780; }
+
+.scondicon {
+  position: relative; }
+  .scondicon .redicon {
+    color: #FF4423;
+    position: absolute;
+    width: 11px;
+    height: 11px;
+    right: 7px;
+    margin-bottom: 5px;
+    bottom: 31px; }
+
+.icons {
+  gap: 20px;
+  position: absolute;
+  top: 64%;
+  left: 5%;
+  display: flex;
+  color: #90A3BF; }
+  .icons div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 6px; }
+
+.fa-heart:hover {
+  cursor: pointer; }
+
 .header {
   width: 100%;
   height: 124px;
@@ -190,13 +369,8 @@ h1, h2, h3, h4, h5, h6, p, ul, li, span, div, i, a, button {
         display: flex;
         align-items: center;
         justify-content: space-between; }
-        .header__left__search__inside__logo {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          margin: 10px 0px 10px 20px;
-          width: 24px;
-          height: 24px; }
+        .header__left__search__inside:hover {
+          cursor: text; }
         .header__left__search__inside__text {
           left: 64px;
           color: #596780;
@@ -220,32 +394,93 @@ h1, h2, h3, h4, h5, h6, p, ul, li, span, div, i, a, button {
     align-items: center;
     gap: 20px;
     margin-right: 32px; }
-    .header__right__firsticon, .header__right__secondicon, .header__right__thirdicon {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 44px;
-      background-color: #C3D4E966;
-      height: 44px;
-      border-radius: 90px;
-      border: 1px solid rgba(195, 212, 233, 0.4);
-      opacity: 0.8; }
-      .header__right__firsticon a, .header__right__secondicon a, .header__right__thirdicon a {
-        color: #596780; }
-    .header__right__secondicon {
-      position: relative; }
-      .header__right__secondicon__redicon {
-        color: #FF4423;
-        position: absolute;
-        width: 11px;
-        height: 11px;
-        right: 7px;
-        margin-bottom: 5px;
-        bottom: 31px; }
     .header__right__image {
       width: 44px;
       height: 44px;
       border-radius: 90px; }
+
+.buttonsecondd {
+  display: flex;
+  width: 130px;
+  height: 44px;
+  padding: 0px 20px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  border-radius: 4px;
+  background-color: #54A6FF; }
+  .buttonsecondd .buttoninside2 {
+    display: flex;
+    width: 120px;
+    height: 24px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 16px; }
+
+.buttonfirst {
+  display: flex;
+  width: 130px;
+  height: 44px;
+  padding: 0px 20px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  border-radius: 4px;
+  background-color: #3563E9; }
+  .buttonfirst .buttoninside {
+    display: flex;
+    width: 120px;
+    height: 24px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 16px; }
+
+.rentbuttons {
+  display: flex;
+  width: 130px;
+  height: 44px;
+  padding: 0px 20px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  border-radius: 4px;
+  background-color: #3563E9; }
+  .rentbuttons .insides {
+    display: flex;
+    width: 120px;
+    height: 24px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 16px; }
+
+.showbutton {
+  display: flex;
+  width: 156px;
+  height: 44px;
+  padding: 0px 20px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  border-radius: 4px;
+  background-color: #3563E9; }
+  .showbutton .showinside {
+    display: flex;
+    width: 116px;
+    height: 24px;
+    flex-direction: column;
+    justify-content: center;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 16px; }
 
 .main {
   width: 100%;
@@ -291,41 +526,261 @@ h1, h2, h3, h4, h5, h6, p, ul, li, span, div, i, a, button {
               color: #FFFFFF;
               width: 284px;
               font-size: 16px; }
-            .main__section1__container__row__col6 .about a {
-              display: flex;
-              width: 116px;
-              height: 44px;
-              padding: 0px 20px;
-              justify-content: center;
-              align-items: center;
-              gap: 8px;
-              border-radius: 4px;
-              background-color: #3563E9; }
-              .main__section1__container__row__col6 .about a div {
-                display: flex;
-                width: 116px;
-                height: 24px;
-                flex-direction: column;
-                justify-content: center;
-                color: #FFFFFF;
-                text-align: center;
-                font-size: 16px; }
-            .main__section1__container__row__col6 .about .buttonlink {
-              background-color: #54A6FF; }
   .main__section3 {
-    margin-top: 15px;
-    width: 100%;
-    height: auto; }
-    .main__section3__container {
-      width: 90%; }
-      .main__section3__container__row {
-        width: 100%;
+    width: 90%;
+    height: auto;
+    margin: 4%; }
+    .main__section3__top {
+      display: flex;
+      align-items: center;
+      justify-content: space-between; }
+      .main__section3__top__left {
+        width: 92px;
+        height: 24px;
+        color: #90A3BF;
+        font-size: 16px; }
+      .main__section3__top right {
+        width: 64px;
+        height: 24px;
+        font-size: 16px; }
+        .main__section3__top right a {
+          color: #3563E9; }
+    .main__section3__bottom {
+      margin: 3% 0;
+      width: 80%; }
+      .main__section3__bottom__container {
+        width: 80%;
         display: flex;
-        flex-wrap: nowrap;
-        gap: 32px; }
-        .main__section3__container__row .col-4 {
+        gap: 32px;
+        height: 388px; }
+        .main__section3__bottom__container__row {
+          width: 90%;
           display: flex;
-          align-items: flex-start;
-          flex-direction: column;
-          height: 360px;
-          position: relative; }
+          flex-wrap: nowrap;
+          gap: 32px; }
+          .main__section3__bottom__container__row .col4 {
+            display: flex;
+            width: 290px;
+            flex-direction: column;
+            position: relative;
+            height: 350px;
+            border-radius: 10px;
+            background-color: #FFFFFF;
+            box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+            border: none; }
+            .main__section3__bottom__container__row .col4 .wrapper {
+              position: absolute;
+              top: 3%;
+              right: 5%;
+              font-size: 24px; }
+            .main__section3__bottom__container__row .col4 h4 {
+              position: absolute;
+              color: #1A202C;
+              width: 128px;
+              height: 24px;
+              top: 3%;
+              left: 3%;
+              font-size: 20px; }
+            .main__section3__bottom__container__row .col4 .firstp {
+              width: 128px;
+              height: 20px;
+              font-size: 14px;
+              color: #90A3BF;
+              position: absolute;
+              top: 10%;
+              left: 3%; }
+            .main__section3__bottom__container__row .col4 img {
+              padding-left: 24px;
+              position: absolute;
+              width: 228px;
+              top: 30%;
+              left: 9%;
+              height: 72px; }
+            .main__section3__bottom__container__row .col4 .buttonrent {
+              display: flex;
+              position: absolute;
+              height: 50px;
+              align-items: center;
+              gap: 35px;
+              left: 5%;
+              top: 78%; }
+              .main__section3__bottom__container__row .col4 .buttonrent p {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                height: 44px;
+                color: #1A202C;
+                font-size: 20px;
+                gap: 5px; }
+                .main__section3__bottom__container__row .col4 .buttonrent p small {
+                  color: #596780; }
+  .main__section4 {
+    width: 90%;
+    height: auto;
+    margin: 4%; }
+    .main__section4__top {
+      display: flex;
+      align-items: center; }
+      .main__section4__top__left {
+        font-size: 16px;
+        width: 156px;
+        height: 24px;
+        color: #90A3BF; }
+    .main__section4__middle {
+      margin: 3% 0;
+      width: 80%; }
+      .main__section4__middle__container {
+        width: 80%;
+        display: flex;
+        gap: 32px;
+        height: 388px; }
+        .main__section4__middle__container__row {
+          width: 90%;
+          display: flex;
+          flex-wrap: nowrap;
+          gap: 32px; }
+          .main__section4__middle__container__row .col4 {
+            display: flex;
+            width: 290px;
+            flex-direction: column;
+            position: relative;
+            height: 350px;
+            border-radius: 10px;
+            background-color: #FFFFFF;
+            box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+            border: none; }
+            .main__section4__middle__container__row .col4 .wrapper {
+              position: absolute;
+              top: 3%;
+              right: 5%;
+              font-size: 24px; }
+            .main__section4__middle__container__row .col4 h4 {
+              position: absolute;
+              color: #1A202C;
+              width: 128px;
+              height: 24px;
+              top: 3%;
+              left: 3%;
+              font-size: 20px; }
+            .main__section4__middle__container__row .col4 .firstp {
+              width: 128px;
+              height: 20px;
+              font-size: 14px;
+              color: #90A3BF;
+              position: absolute;
+              top: 10%;
+              left: 3%; }
+            .main__section4__middle__container__row .col4 img {
+              padding-left: 24px;
+              position: absolute;
+              width: 228px;
+              top: 30%;
+              left: 9%;
+              height: 72px; }
+            .main__section4__middle__container__row .col4 .buttonrent {
+              display: flex;
+              position: absolute;
+              height: 50px;
+              align-items: center;
+              gap: 35px;
+              left: 5%;
+              top: 78%; }
+              .main__section4__middle__container__row .col4 .buttonrent p {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                height: 44px;
+                color: #1A202C;
+                font-size: 20px;
+                gap: 5px; }
+                .main__section4__middle__container__row .col4 .buttonrent p small {
+                  color: #596780; }
+    .main__section4__bottom {
+      margin: 3% 0;
+      width: 70%; }
+      .main__section4__bottom__container {
+        width: 80%;
+        display: flex;
+        gap: 32px;
+        height: 388px; }
+        .main__section4__bottom__container__row {
+          width: 90%;
+          display: flex;
+          flex-wrap: nowrap;
+          gap: 32px; }
+          .main__section4__bottom__container__row .col4 {
+            display: flex;
+            width: 290px;
+            flex-direction: column;
+            position: relative;
+            height: 350px;
+            border-radius: 10px;
+            background-color: #FFFFFF;
+            box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+            border: none; }
+            .main__section4__bottom__container__row .col4 .wrapper {
+              position: absolute;
+              top: 3%;
+              right: 5%;
+              font-size: 24px; }
+            .main__section4__bottom__container__row .col4 h4 {
+              position: absolute;
+              color: #1A202C;
+              width: 128px;
+              height: 24px;
+              top: 3%;
+              left: 3%;
+              font-size: 20px; }
+            .main__section4__bottom__container__row .col4 .firstp {
+              width: 128px;
+              height: 20px;
+              font-size: 14px;
+              color: #90A3BF;
+              position: absolute;
+              top: 10%;
+              left: 3%; }
+            .main__section4__bottom__container__row .col4 img {
+              padding-left: 24px;
+              position: absolute;
+              width: 228px;
+              top: 30%;
+              left: 9%;
+              height: 72px; }
+            .main__section4__bottom__container__row .col4 .buttonrent {
+              display: flex;
+              position: absolute;
+              height: 50px;
+              align-items: center;
+              gap: 35px;
+              left: 5%;
+              top: 78%; }
+              .main__section4__bottom__container__row .col4 .buttonrent p {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                height: 44px;
+                color: #1A202C;
+                font-size: 20px;
+                gap: 5px; }
+                .main__section4__bottom__container__row .col4 .buttonrent p small {
+                  color: #596780; }
+    .main__section4__bottom2 {
+      display: flex;
+      justify-content: end;
+      align-items: center;
+      width: 95%; }
+      .main__section4__bottom2__inside {
+        margin: 3% 0;
+        width: 734px;
+        height: 44px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between; }
+        .main__section4__bottom2__inside__right {
+          font-size: 14px;
+          color: #596780;
+          width: 140px;
+          height: 44px;
+          display: flex;
+          justify-content: center;
+          align-items: center; }
