--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -2,13 +2,14 @@
 @import '../utils/variables';
 @import '../base/typography';
 @import '../utils/color';
+@import '../components/icons';
 
 .header {
     width: 100%;
     height: 124px;
     @include displeyspacebetween;
     border: 1px solid $colorrgb;
-    background:$colorF;
+    background: $colorF;
 
     &__left {
         @include displeycenter;
@@ -19,7 +20,7 @@
             color: $colorblue;
             width: 148px;
             height: 44px;
-           
+
             font-size: 32px;
             font-style: normal;
             font-weight: 700;
@@ -33,23 +34,19 @@
             border: 1px solid $colorrgb;
             background: $colorF;
 
+          
             margin-left: 64px;
+
+           
 
             &__inside {
                 position: relative;
 
+                &:hover{
+                    cursor: text;
+                }
                 height: 44px;
                 @include displeyspacebetween;
-
-                &__logo {
-                    @include displeycenter;
-                    margin: 10px 0px 10px 20px;
-                    width: 24px;
-                    height: 24px;
-
-
-
-                }
 
                 &__text {
 
@@ -57,7 +54,7 @@
                     color: $colorgre;
                     text-align: center;
                     position: absolute;
-                 
+
                     font-size: 14px;
                     font-style: normal;
                     font-weight: 500;
@@ -80,43 +77,6 @@
         @include displeycenter;
         gap: 20px;
         margin-right: 32px;
-
-        &__firsticon {
-            @include displeycenter;
-            width: 44px;
-
-            a {
-                color: $colorgre;
-            }
-
-            background-color: $colorC3;
-            height: 44px;
-            border-radius: 90px;
-            border: 1px solid $colorrgb;
-            opacity: 0.8;
-        }
-
-        &__secondicon {
-            @extend .header__right__firsticon;
-
-            position: relative;
-
-            &__redicon {
-                color: $colorRed;
-                position: absolute;
-                width: 11px;
-                height: 11px;
-                
-                right: 7px;
-                margin-bottom: 5px;
-                bottom: 31px;
-            }
-        }
-
-        &__thirdicon {
-            @extend .header__right__firsticon;
-        }
-
 
         &__image {
             width: 44px;
