--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -14,6 +14,15 @@
     &__left {
         @include displeycenter;
 
+        .mobileversion {
+            margin-left: 3%;
+            display: none;
+            width: 24px;
+            height: 24px;
+            justify-content: center;
+            align-items: center;
+            font-size: 20px
+        }
 
         &__loqo {
             margin-left: 60px;
@@ -34,17 +43,18 @@
             border: 1px solid $colorrgb;
             background: $colorF;
 
-          
+
             margin-left: 64px;
 
-           
+
 
             &__inside {
                 position: relative;
 
-                &:hover{
+                &:hover {
                     cursor: text;
                 }
+
                 height: 44px;
                 @include displeyspacebetween;
 
@@ -84,4 +94,36 @@
             border-radius: 90px;
         }
     }
+}
+
+@media only screen and (max-width: 767px) {
+
+    .header {
+        width: 100%;
+        height: 160px;
+
+        .mobileversion {
+            display: block;
+        }
+
+        .header__left {
+            margin-top: 10px;
+            margin-left: 10px;
+            align-items: start;
+            justify-content: start;
+            flex-direction: column;
+
+            .header__left__loqo {
+                margin-bottom: 10px;
+            }
+        }
+
+        .header__right>div {
+            display: none;
+        }
+
+       
+    }
+
+    
 }
